# code/webapp/app/Http/Controllers/Api/AnswerController.php
@@ -7,6 +7,173 @@ use App\Http\Requests\StoreAnswerRequest;
 use App\Models\Answer;
 use Illuminate\Http\Request;
 
+/**
+ * @OA\Schema(
+ *     schema="Answer",
+ *     @OA\Property(
+ *         property="id",
+ *         type="integer",
+ *         format="int64",
+ *         example=1
+ *     ),
+ *     @OA\Property(
+ *         property="question_id",
+ *         type="integer",
+ *         format="int64",
+ *         example=1
+ *     ),
+ *     @OA\Property(
+ *         property="answer",
+ *         type="string",
+ *         example="Answer 1"
+ *     ),
+ *     @OA\Property(
+ *         property="created_at",
+ *         type="string",
+ *         format="date-time",
+ *         example="2021-05-12 12:00:00"
+ *     ),
+ *     @OA\Property(
+ *         property="updated_at",
+ *         type="string",
+ *         format="date-time",
+ *         example="2021-05-12 12:00:00"
+ *     )
+ * )
+ * 
+ * @OA\Get(
+    * path="/api/answers",
+    * tags={"Answers"},
+    * summary="Get list of answers",
+    * description="Returns list of answers",
+    * @OA\Response(
+        * response=200,
+        * description="successful operation",
+        * @OA\JsonContent(
+            * @OA\Property(
+                * property="status",
+                * type="boolean",
+                * example=true
+            * ),
+            * @OA\Property(
+                * property="answers",
+                * type="array",
+                * @OA\Items(
+                    * ref="#/components/schemas/Answer"
+                * )
+            * ),
+        * ),
+    * ),
+ * )
+ * 
+ * @OA\Post(
+    * path="/api/answers",
+    * tags={"Answers"},
+    * summary="Create new answer",
+    * description="Create new answer",
+    * @OA\RequestBody(
+        * required=true,
+        * @OA\JsonContent(ref="#/components/schemas/Answer")
+    * ),
+    * @OA\Response(
+        * response=200,
+        * description="successful operation",
+        * @OA\JsonContent(
+            * @OA\Property(
+                * property="status",
+                * type="boolean",
+                * example=true
+            * ),
+            * @OA\Property(
+                * property="message",
+                * type="string",
+                * example="Answer created succesfully"
+            * ),
+            * @OA\Property(
+                * property="answer",
+                * ref="#/components/schemas/Answer"
+            * ),
+        * ),
+    * ),
+ * )
+ * 
+ * @OA\Patch(
+    * path="/api/answers/{id}",
+    * tags={"Answers"},
+    * summary="Update answer",
+    * description="Update answer",
+    * @OA\Parameter(
+        * name="id",
+        * in="path",
+        * description="ID of answer to update",
+        * required=true,
+        * @OA\Schema(
+            * type="integer",
+            * format="int64"
+        * )
+    * ),
+    * @OA\RequestBody(
+        * required=true,
+        * @OA\JsonContent(ref="#/components/schemas/Answer")
+    * ),
+    * @OA\Response(
+        * response=200,
+        * description="successful operation",
+        * @OA\JsonContent(
+            * @OA\Property(
+                * property="status",
+                * type="boolean",
+                * example=true
+            * ),
+            * @OA\Property(
+                * property="message",
+                * type="string",
+                * example="Answer updated succesfully"
+            * ),
+            * @OA\Property(
+                * property="answer",
+                * ref="#/components/schemas/Answer"
+            * ),
+        * ),
+    * ),
+ * )
+ * 
+ * @OA\Delete(
+    * path="/api/answers/{id}",
+    * tags={"Answers"},
+    * summary="Delete answer",
+    * description="Delete answer",
+    * @OA\Parameter(
+        * name="id",
+        * in="path",
+        * description="ID of answer to delete",
+        * required=true,
+        * @OA\Schema(
+            * type="integer",
+            * format="int64"
+        * )
+    * ),
+    * @OA\Response(
+        * response=200,
+        * description="successful operation",
+        * @OA\JsonContent(
+            * @OA\Property(
+                * property="status",
+                * type="boolean",
+                * example=true
+            * ),
+            * @OA\Property(
+                * property="message",
+                * type="string",
+                * example="Answer deleted succesfully"
+            * ),
+        * ),
+    * ),
+ * )
+ * 
+ */
+
+
 class AnswerController extends Controller
 {
     /**
